--- a/ModelingPart1/1 - K-NN.ipynb
+++ b/ModelingPart1/1 - K-NN.ipynb
@@ -7,18 +7,18 @@
     "## Nearest Neighbors Classification in scikit-learn\n",
     "\n",
     "API Docs: https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier\n",
+    "\n",
     "Demo: https://scikit-learn.org/stable/auto_examples/neighbors/plot_classification.html#sphx-glr-auto-examples-neighbors-plot-classification-py\n",
+    "(New BSD License, Copyright (c) 2007–2019 The scikit-learn developers)\n",
     "\n",
     "Weights:\n",
     "- Uniform: all points in the neighborhood are weighted equally8\n",
-    "- Distance: weight points by the inverse of their distance. in this case, closer neighbors of a query point will have a greater influence than neighbors which are further away\n",
-    "\n",
-    "\n"
+    "- Distance: weight points by the inverse of their distance. in this case, closer neighbors of a query point will have a greater influence than neighbors which are further away"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +96,18 @@
     "              % (n_neighbors, weights))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "Run the above code for varying values of $n$.\n",
+    "\n",
+    "Questions to answer after the lecture:\n",
+    "* Which $n$ produces the best results (i.e., performance - compute/retrieve precision/recall scores)?\n",
+    "* Explain how modifiying $n$ affects the bias-variance tradeoff"
    ]
   },
   {
