--- a/ModelingPart1/5 - Linear Regression.ipynb
+++ b/ModelingPart1/5 - Linear Regression.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Linear Regression\n",
+    "\n",
+    "Code adopted from https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/05.06-Linear-Regression.ipynb (MIT License)\n",
+    "\n",
     "Straight-line fit to data:  $ y = ax + b $"
    ]
   },
@@ -99,6 +102,13 @@
    "source": [
     "print(\"Model slope:    \", model.coef_[0])\n",
     "print(\"Model intercept:\", model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demonstrate the effect of outliers on a liner model"
    ]
   },
   {
@@ -456,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
