Updated linear regressions - review questions

--- a/ModelingPart1/5 - Linear Regression.ipynb
+++ b/ModelingPart1/5 - Linear Regression.ipynb
@@ -429,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -494,6 +496,18 @@
     "from sklearn.linear_model import Lasso\n",
     "model = make_pipeline(GaussianFeatures(30), Lasso(alpha=0.001))\n",
     "basis_plot(model, title='Lasso Regression')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Review questions and exercises\n",
+    "\n",
+    "* What do the slope coefficients mean in the linear regression model?\n",
+    "* Why is linear regression susceptible to outliers?\n",
+    "* How can you test if a particular feature / independent variable is significant?\n",
+    "* What is the advantage of Lasso over Ridge?"
    ]
   },
   {
