Modeling part 2 updates

--- a/ModelingPart2/2 - Trees.ipynb
+++ b/ModelingPart2/2 - Trees.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Chapter 8 - Tree-based Methods\n",
-    "Source: https://github.com/JWarmenhoven/ISLR-python"
+    "Source: https://github.com/JWarmenhoven/ISLR-python\n",
+    "\n",
+    "\n",
+    "SK-Learn Documentation: https://scikit-learn.org/dev/modules/tree.html\n"
    ]
   },
   {
@@ -268,7 +271,7 @@
    "metadata": {},
    "source": [
     "### Pruning\n",
-    "This is currently not supported in scikit-learn. See first point under 'disadvantages of decision trees in the <A href='http://scikit-learn.github.io/dev/modules/tree.html#'>documentation</A>. Implementation has been <A href='https://github.com/scikit-learn/scikit-learn/pull/941'>discussed</A> but Random Forests have better predictive qualities than a single pruned tree anyway if I understand correctly.\n",
+    "This is currently not supported in scikit-learn. See first point under 'disadvantages of decision trees in the <A href='http://scikit-learn.github.io/dev/modules/tree.html#'>documentation</A>. Implementation has been <A href='https://github.com/scikit-learn/scikit-learn/pull/941'>discussed</A> but Random Forests have better predictive qualities than a single pruned tree.\n",
     "    "
    ]
   },
@@ -962,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In R, I exported the dataset from package 'MASS' to a csv file."
+    "In R, exported the dataset from package 'MASS' to a csv file."
    ]
   },
   {
