--- a/ModelingPart2/3 - SVMs.ipynb
+++ b/ModelingPart2/3 - SVMs.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 9 - Support Vector Machines"
+    "# Chapter 9 - Support Vector Machines\n",
+    "\n",
+    "Primary source: https://github.com/JWarmenhoven/ISLR-python\n",
+    "\n",
+    "Additional notebook: https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/05.07-Support-Vector-Machines.ipynb\n",
+    "\n",
+    "SK-Learn Documentation: https://scikit-learn.org/dev/modules/svm.html"
    ]
   },
   {
