--- a/DataCleaning/DataInconsistency.ipynb
+++ b/DataCleaning/DataInconsistency.ipynb
@@ -1588,6 +1588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# write the cleansed data to a file\n",
     "suicide_attacks.to_csv(\"PakistanSuicideAttacks_citesCleaned.csv\")"
    ]
   },
