--- a/FeatureExtraction/10 - tpot_titanic.ipynb
+++ b/FeatureExtraction/10 - tpot_titanic.ipynb
@@ -38,6 +38,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tests to see if we are running in the Google Colaboratory environment\n",
+    "# If so, use an https URL to access the data.  Otherwise, load via the file path\n",
+    "try:\n",
+    "  import google.colab\n",
+    "  data_file_prefix = \"https://raw.githubusercontent.com/slankas/DataScienceNotebooks/master/DataCleaning/\"\n",
+    "  import plotly.io as pio\n",
+    "  pio.renderers.default = 'colab'\n",
+    "except:\n",
+    "  data_file_prefix = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -186,7 +203,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "titanic = pd.read_csv('titanic_train.csv')\n",
+    "titanic = pd.read_csv(data_file_prefix+'titanic_train.csv')\n",
     "titanic.head(5)"
    ]
   },
@@ -3191,7 +3208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
