--- a/FeatureCreation/Spacy.ipynb
+++ b/FeatureCreation/Spacy.ipynb
@@ -18,9 +18,27 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from pylab import rcParams\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('gutenberg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from nltk.corpus import gutenberg\n",
     "# import Emma by Jane Austin\n",
-    "emma_raw = gutenberg.raw(\"austen-emma.txt\")\n"
+    "emma_raw = gutenberg.raw(\"austen-emma.txt\")"
    ]
   },
   {
