--- a/FeatureExtraction/9 - TPOT_MNIST.ipynb
+++ b/FeatureExtraction/9 - TPOT_MNIST.ipynb
@@ -11,8 +11,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jbslanka/.local/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-      "  warnings.warn(msg, category=DeprecationWarning)\n"
+      "/home/jbslanka/mypython/lib/python3.8/site-packages/tpot/builtins/__init__.py:36: UserWarning: Warning: optional dependency `torch` is not available. - skipping import of NN models.\n",
+      "  warnings.warn(\"Warning: optional dependency `torch` is not available. - skipping import of NN models.\")\n"
      ]
     }
    ],
@@ -66,12 +66,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f2feb0456df4a87a10bf5430193b6a6",
+       "model_id": "13ca3a7de8d44092bda0c79e93a91310",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='Optimization Progress', max=40, style=ProgressStyle(descripti…"
+       "HBox(children=(HTML(value='Optimization Progress'), FloatProgress(value=0.0, max=40.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -82,27 +82,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
+      "Generation 1 - Current best internal CV score: 0.9873771168938456\n",
+      "10.48 minutes have elapsed. TPOT will close down.\n",
       "TPOT closed during evaluation in one generation.\n",
       "WARNING: TPOT may not provide a good pipeline if TPOT is stopped/interrupted in a early generation.\n",
       "\n",
       "\n",
       "TPOT closed prematurely. Will use the current best pipeline.\n",
       "\n",
-      "Best pipeline: RandomForestClassifier(input_matrix, bootstrap=True, criterion=entropy, max_features=0.6000000000000001, min_samples_leaf=15, min_samples_split=13, n_estimators=100)\n"
+      "Best pipeline: KNeighborsClassifier(input_matrix, n_neighbors=2, p=2, weights=distance)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TPOTClassifier(config_dict=None, crossover_rate=0.1, cv=5,\n",
-       "               disable_update_check=False, early_stop=None, generations=1000000,\n",
-       "               max_eval_time_mins=5, max_time_mins=10, memory=None,\n",
-       "               mutation_rate=0.9, n_jobs=1, offspring_size=None,\n",
-       "               periodic_checkpoint_folder=None, population_size=40,\n",
-       "               random_state=None, scoring=None, subsample=1.0,\n",
-       "               template='RandomTree', use_dask=False, verbosity=2,\n",
-       "               warm_start=False)"
+       "TPOTClassifier(log_file=<ipykernel.iostream.OutStream object at 0x7f1adf2d1fd0>,\n",
+       "               max_time_mins=10, population_size=40, verbosity=2)"
       ]
      },
      "execution_count": 5,
@@ -116,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9111111111111111"
+       "0.9888888888888889"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
