--- a/Databases/SparkDemo.ipynb
+++ b/Databases/SparkDemo.ipynb
@@ -13,8 +13,11 @@
     "pip install findspark\n",
     "\n",
     "\n",
-    "Will need to set your SPARK home installation\n",
+    "Will need to set your SPARK home installation.  Second example is from a venv\n",
+    "\n",
     "export SPARK_HOME=/home/jbslanka/spark/spark-3.0.0-preview2-bin-hadoop3.2\n",
+    "\n",
+    "export SPARK_HOME=/home/jbslanka/mypython/lib/python3.8/site-packages/pyspark\n",
     "\n",
     "May need to execute:\n",
     "\n",
@@ -42,12 +45,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1415888\n"
+      "3.141637\n"
      ]
     }
    ],
    "source": [
     "#Source: https://www.sicara.ai/blog/2017-05-02-get-started-pyspark-jupyter-notebook-3-minutes\n",
+    "#Estimating pi using Monto Carlo: https://www.geeksforgeeks.org/estimating-value-pi-using-monte-carlo/\n",
     "\n",
     "import pyspark\n",
     "import random\n",
@@ -255,9 +259,9 @@
       "+----+-----+\n",
       "| age|count|\n",
       "+----+-----+\n",
-      "|  30|    1|\n",
       "|  19|    1|\n",
       "|null|    1|\n",
+      "|  30|    1|\n",
       "+----+-----+\n",
       "\n"
      ]
@@ -298,9 +302,9 @@
       "+----+--------+\n",
       "| age|count(1)|\n",
       "+----+--------+\n",
-      "|  30|       1|\n",
       "|  19|       1|\n",
       "|null|       1|\n",
+      "|  30|       1|\n",
       "+----+--------+\n",
       "\n"
      ]
@@ -352,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
