add install tpot

--- a/FeatureExtraction/9 - TPOT_MNIST.ipynb
+++ b/FeatureExtraction/9 - TPOT_MNIST.ipynb
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "!pip install tpot\n",
     "from tpot import TPOTClassifier\n",
     "from sklearn.datasets import load_digits\n",
     "from sklearn.model_selection import train_test_split"
