install tpot if necessary

--- a/FeatureExtraction/10 - tpot_titanic.ipynb
+++ b/FeatureExtraction/10 - tpot_titanic.ipynb
@@ -29,6 +29,7 @@
     }
    ],
    "source": [
+    "!pip install tpot\n",
     "# Import required libraries\n",
     "from tpot import TPOTClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
