--- a/ModelingPart2/3 - SVMs.ipynb
+++ b/ModelingPart2/3 - SVMs.ipynb
@@ -192,14 +192,14 @@
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.00096214, 0.00072658, 0.00061946, 0.00087306, 0.00084116,\n",
-       "        0.00071511, 0.00112064]),\n",
-       " 'std_fit_time': array([6.80201840e-04, 2.62073998e-04, 4.76597249e-05, 3.89320858e-04,\n",
-       "        4.64164278e-04, 1.15807598e-04, 4.36078818e-04]),\n",
-       " 'mean_score_time': array([0.00052435, 0.0004035 , 0.00035112, 0.00042982, 0.00049558,\n",
-       "        0.00044978, 0.0004308 ]),\n",
-       " 'std_score_time': array([2.87366024e-04, 9.10137249e-05, 3.15041172e-05, 7.90193988e-05,\n",
-       "        2.11934088e-04, 1.42025059e-04, 4.47619628e-05]),\n",
+       "{'mean_fit_time': array([0.00083263, 0.00036581, 0.00040421, 0.00042088, 0.00049973,\n",
+       "        0.00035751, 0.00051773]),\n",
+       " 'std_fit_time': array([8.00430407e-04, 8.13165388e-05, 7.17141685e-05, 1.24324810e-04,\n",
+       "        1.19230221e-04, 2.55902670e-05, 1.02746638e-04]),\n",
+       " 'mean_score_time': array([0.00050099, 0.00021725, 0.00024378, 0.00022492, 0.00030017,\n",
+       "        0.0001945 , 0.00025101]),\n",
+       " 'std_score_time': array([5.26653118e-04, 6.00199346e-05, 4.92694460e-05, 3.59990265e-05,\n",
+       "        1.16036341e-04, 4.29391795e-06, 1.49217303e-04]),\n",
        " 'param_C': masked_array(data=[0.001, 0.01, 0.1, 1, 5, 10, 100],\n",
        "              mask=[False, False, False, False, False, False, False],\n",
        "        fill_value='?',\n",
@@ -707,30 +707,30 @@
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.00125296, 0.00094559, 0.00119455, 0.00086246, 0.00182638,\n",
-       "        0.00203013, 0.0012579 , 0.0013958 , 0.00129144, 0.00126092,\n",
-       "        0.00146525, 0.0017812 , 0.00234489, 0.00289803, 0.0017154 ,\n",
-       "        0.00146797, 0.00128303, 0.00202253, 0.00332723, 0.00323293,\n",
-       "        0.00127792, 0.00128901, 0.00148799, 0.00139523, 0.00179865]),\n",
-       " 'std_fit_time': array([7.19705758e-04, 2.05384632e-04, 2.01878799e-04, 7.05595102e-05,\n",
-       "        8.65555705e-04, 1.11610649e-03, 4.13587603e-04, 7.19214342e-04,\n",
-       "        8.10841763e-04, 3.43214522e-04, 3.88017811e-04, 2.94570037e-04,\n",
-       "        1.48666688e-03, 1.94962847e-03, 4.14278451e-04, 1.92435918e-04,\n",
-       "        7.90770282e-04, 2.99592701e-04, 2.57899951e-03, 3.62879296e-03,\n",
-       "        3.01276305e-04, 2.65229632e-04, 3.07682210e-04, 2.06130146e-04,\n",
-       "        4.50355132e-04]),\n",
-       " 'mean_score_time': array([0.00056849, 0.00061655, 0.0006074 , 0.00041668, 0.0007302 ,\n",
-       "        0.00098372, 0.00070384, 0.00064263, 0.00047607, 0.00062294,\n",
-       "        0.00077631, 0.00101578, 0.00135725, 0.00116453, 0.00068247,\n",
-       "        0.0007339 , 0.00061197, 0.00118942, 0.00142128, 0.00267339,\n",
-       "        0.00058308, 0.0005635 , 0.00066528, 0.00069675, 0.00098469]),\n",
-       " 'std_score_time': array([2.04459945e-04, 3.18315591e-04, 1.29106564e-04, 3.33302096e-05,\n",
-       "        2.43309122e-04, 5.65354120e-04, 3.82580651e-04, 3.22856985e-04,\n",
-       "        1.12418989e-04, 2.51759719e-04, 1.75510844e-04, 4.82355095e-04,\n",
-       "        1.52410585e-03, 5.29373611e-04, 1.24482779e-04, 1.38210853e-04,\n",
-       "        3.24019810e-04, 5.73697802e-04, 1.37298922e-03, 3.75929564e-03,\n",
-       "        1.69534025e-04, 1.33917288e-04, 1.61099143e-04, 2.47230001e-04,\n",
-       "        4.27412175e-04]),\n",
+       "{'mean_fit_time': array([0.00168018, 0.0007163 , 0.00070488, 0.00079799, 0.00062697,\n",
+       "        0.00063655, 0.00064123, 0.00082557, 0.0009182 , 0.00052888,\n",
+       "        0.00040116, 0.00043588, 0.00051603, 0.00050738, 0.0006201 ,\n",
+       "        0.00048988, 0.00047636, 0.00053699, 0.00057321, 0.00052402,\n",
+       "        0.00050049, 0.00053389, 0.00050969, 0.000577  , 0.00054865]),\n",
+       " 'std_fit_time': array([9.05563773e-04, 1.85284256e-04, 2.48546040e-04, 2.29107452e-04,\n",
+       "        5.94431645e-05, 1.21794817e-04, 8.94639311e-05, 2.93984418e-04,\n",
+       "        2.81802527e-04, 1.02847820e-04, 1.10479167e-05, 5.72956902e-05,\n",
+       "        1.28372286e-04, 3.47276037e-05, 1.83947511e-04, 1.08543998e-04,\n",
+       "        7.58781877e-05, 7.21153777e-05, 1.04680734e-04, 1.88698779e-05,\n",
+       "        1.07767139e-04, 1.50061421e-04, 1.14628519e-05, 1.09883316e-04,\n",
+       "        6.42417346e-05]),\n",
+       " 'mean_score_time': array([0.00071983, 0.00033526, 0.00030923, 0.00036244, 0.00031471,\n",
+       "        0.00036759, 0.00030577, 0.00037901, 0.00041461, 0.00022187,\n",
+       "        0.00022175, 0.0002074 , 0.00023508, 0.00021935, 0.00025971,\n",
+       "        0.00023565, 0.00022082, 0.00022495, 0.00021288, 0.00021296,\n",
+       "        0.00024941, 0.00025136, 0.00021038, 0.00022244, 0.00021443]),\n",
+       " 'std_score_time': array([2.40230395e-04, 4.33660785e-05, 6.16228782e-05, 9.75063667e-05,\n",
+       "        3.86011387e-05, 1.33243004e-04, 3.46608876e-05, 9.21820732e-05,\n",
+       "        1.54958798e-04, 1.82934647e-05, 3.98600570e-05, 9.43875638e-06,\n",
+       "        6.02554082e-05, 3.24447305e-05, 6.43106485e-05, 3.69882740e-05,\n",
+       "        2.62589249e-05, 3.32103046e-05, 6.87162714e-06, 1.47395140e-05,\n",
+       "        8.62622307e-05, 1.36309098e-04, 1.41130911e-06, 3.70267968e-05,\n",
+       "        1.03029935e-05]),\n",
        " 'param_C': masked_array(data=[0.01, 0.01, 0.01, 0.01, 0.01, 0.1, 0.1, 0.1, 0.1, 0.1,\n",
        "                    1, 1, 1, 1, 1, 10, 10, 10, 10, 10, 100, 100, 100, 100,\n",
        "                    100],\n",
@@ -952,7 +952,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing the ROC curves of two models on train/test data. One model is more flexible than the other."
+    "Comparing the ROC curves of two models on train/test data. One model is more flexible than the other.\n",
+    "\n",
+    "ROC curve plots TPR vs. FPR at different classification thresholds. Lowering the classification threshold classifies more items as positive, thus increasing both False Positives and True Positives. \n",
+    "\n",
+    "True Positive Rate (TPR) = TP / (TP+FN)\n",
+    "\n",
+    "False Positive Rate (FPR) = FP / (FP+TN)"
    ]
   },
   {
@@ -1161,15 +1167,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('data/Khan_xtrain.csv').drop('Unnamed: 0', axis=1)\n",
-    "y_train = pd.read_csv('data/Khan_ytrain.csv').drop('Unnamed: 0', axis=1).to_numpy().ravel()\n",
-    "X_test = pd.read_csv('data/Khan_xtest.csv').drop('Unnamed: 0', axis=1)\n",
-    "y_test = pd.read_csv('data/Khan_ytest.csv').drop('Unnamed: 0', axis=1).to_numpy().ravel()"
+    "# Tests to see if we are running in the Google Colaboratory environment\n",
+    "# If so, use an https URL to access the data.  Otherwise, load via the file path\n",
+    "try:\n",
+    "  import google.colab\n",
+    "  data_file_prefix = \"https://raw.githubusercontent.com/slankas/DataScienceNotebooks/master/ModelingPart2/\"\n",
+    "  import plotly.io as pio\n",
+    "  pio.renderers.default = 'colab'\n",
+    "except:\n",
+    "  data_file_prefix = \"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pd.read_csv(data_file_prefix + 'data/Khan_xtrain.csv').drop('Unnamed: 0', axis=1)\n",
+    "y_train = pd.read_csv(data_file_prefix + 'data/Khan_ytrain.csv').drop('Unnamed: 0', axis=1).to_numpy().ravel()\n",
+    "X_test = pd.read_csv(data_file_prefix +'data/Khan_xtest.csv').drop('Unnamed: 0', axis=1)\n",
+    "y_test = pd.read_csv(data_file_prefix + 'data/Khan_ytest.csv').drop('Unnamed: 0', axis=1).to_numpy().ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1205,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1230,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1251,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1294,6 +1317,20 @@
     "cm_df.columns.name = 'True'\n",
     "print(cm_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
