--- a/ModelingPart2/Exercise2 - digits.ipynb
+++ b/ModelingPart2/Exercise2 - digits.ipynb
@@ -206,14 +206,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[11:34:59] WARNING: ../src/learner.cc:516: \n",
+      "Parameters: { max_features } might not be used.\n",
+      "\n",
+      "  This may not be accurate due to some parameters are only used in language bindings but\n",
+      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+      "  verification. Please open an issue if you find above cases.\n",
+      "\n",
+      "\n",
       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
       "              importance_type='gain', interaction_constraints='',\n",
       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
-      "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
-      "              n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
-      "              objective='multi:softprob', random_state=0, reg_alpha=0,\n",
-      "              reg_lambda=1, scale_pos_weight=None, subsample=1,\n",
+      "              max_features=13, min_child_weight=1, missing=nan,\n",
+      "              monotone_constraints='()', n_estimators=100, n_jobs=0,\n",
+      "              num_parallel_tree=1, objective='multi:softprob', random_state=1,\n",
+      "              reg_alpha=0, reg_lambda=1, scale_pos_weight=None, subsample=1,\n",
       "              tree_method='exact', validate_parameters=1, verbosity=None)\n"
      ]
     },
@@ -229,8 +237,11 @@
     }
    ],
    "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
-    "xmodel = XGBClassifier()\n",
+    "\n",
+    "xmodel = XGBClassifier(max_features=13, random_state=1)   # max_features is ignored by xgbclassifier\n",
     "xmodel.fit(Xtrain, ytrain)\n",
     "print(xmodel)\n",
     "ypred = xmodel.predict(Xtest)\n",
@@ -262,6 +273,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9866666666666667"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "neigh = KNeighborsClassifier(n_neighbors=3)\n",
+    "neigh.fit(Xtrain, ytrain)\n",
+    "ypred = neigh.predict(Xtest)\n",
+    "accuracy_score(ytest, ypred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,7 +308,9 @@
     "\n",
     "How did the performance change?\n",
     "\n",
-    "3) Bring in other models.  Compare altering hyperparameters"
+    "3) Bring in other tree models (decision, bagging, random).  Compare altering hyperparameters\n",
+    "\n",
+    "4) Use different values of K for nearest neighbors."
    ]
   },
   {
