--- a/Text Analytics/4 - Text Classification.ipynb
+++ b/Text Analytics/4 - Text Classification.ipynb
@@ -268,6 +268,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\n",
+    "\n",
+    "Defaults:\n",
+    "- words are tokens of 2 or more alphanumeric characters\n",
+    "- words are lowercased\n",
+    "- strip_accents = none  (can be set to \"ascii\" or \"unicode\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -395,15 +407,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha parameter identified by grid search  {'model__C': 10, 'model__tol': 0.01, 'tfidf__min_df': 5, 'tfidf__ngram_range': (1, 3)}\n",
-      "Best result identified by grid search  0.9623784600442453\n"
+      "Best alpha parameter identified by grid search  {'model__C': 10, 'model__tol': 0.01, 'tfidf__min_df': 1, 'tfidf__ngram_range': (1, 3)}\n",
+      "Best result identified by grid search  0.9674828683969136\n"
      ]
     }
    ],
